<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel" type="com.example.myapplication.viewmodels.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.LoginFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_username"
            android:layout_width="312dp"
            android:layout_height="70dp"
            android:layout_marginStart="53dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="18dp"
            android:hint="@string/account_username"
            android:text="@={viewModel.userName}"
            app:layout_constraintBottom_toTopOf="@+id/input_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_head" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:layout_width="312dp"
            android:layout_height="70dp"
            android:layout_marginStart="53dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="43dp"
            android:hint="@string/account_password"
            android:text="@={viewModel.password}"
            app:layout_constraintBottom_toTopOf="@+id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_username" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="60dp"
            android:text="@string/account_register"
            android:onClickListener="@{view -> viewModel.onRegisterButtonClicked(view)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/button_login" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginStart="54dp"
            android:layout_marginBottom="60dp"
            android:text="@string/account_login"
            android:onClickListener="@{view -> viewModel.onLoginButtonClicked(view)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/image_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="141dp"
            android:layout_marginTop="162dp"
            android:layout_marginEnd="142dp"
            android:layout_marginBottom="66dp"
            app:layout_constraintBottom_toTopOf="@+id/input_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>