<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel" type="com.example.myapplication.viewmodels.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.RegisterFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_username"
            android:layout_width="312dp"
            android:layout_height="70dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="13dp"
            android:text="@={viewModel.userName}"
            app:layout_constraintBottom_toTopOf="@+id/text_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:layout_width="312dp"
            android:layout_height="70dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="11dp"
            android:text="@={viewModel.password}"
            app:layout_constraintBottom_toTopOf="@+id/text_confirm_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_confirm_password"
            android:layout_width="312dp"
            android:layout_height="70dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="30dp"
            android:text="@={viewModel.repeatedPassword}"
            app:layout_constraintBottom_toTopOf="@+id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="161dp"
            android:layout_height="60dp"
            android:layout_marginStart="125dp"
            android:layout_marginEnd="125dp"
            android:layout_marginBottom="30dp"
            android:onClickListener="@{view -> viewModel.onRegisterButtonClicked(view)}"
            android:text="@string/account_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/image_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="141dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="142dp"
            app:layout_constraintBottom_toTopOf="@+id/text_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/text_username"
            android:layout_width="110dp"
            android:layout_height="31dp"
            android:layout_marginEnd="256dp"
            android:layout_marginBottom="1dp"
            android:text="@string/account_username"
            app:layout_constraintBottom_toTopOf="@+id/input_username"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/text_password"
            android:layout_width="110dp"
            android:layout_height="31dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="256dp"
            android:layout_marginBottom="12dp"
            android:text="@string/account_password"
            app:layout_constraintBottom_toTopOf="@+id/input_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_confirm_password"
            android:layout_width="110dp"
            android:layout_height="31dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="256dp"
            android:layout_marginBottom="12dp"
            android:text="@string/account_confirm_password"
            app:layout_constraintBottom_toTopOf="@+id/input_confirm_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>